finished writing html code and began css coding

--- a/index.html
+++ b/index.html
@@ -10,49 +10,60 @@
     <body>
         <div class="page_format">
             <div class="header">
-                <div class="header_links">
+                <div class="header_logo">
                     <img src="images/logo.jpg">
+                </div>
+                <div class="header_links">
                     <a href="https://en.wikipedia.org/wiki/The_Nun_II">header link one</a>
                     <a href="">header link two</a>
                     <a href=""> header link three</a>
                 </div>
             </div>
             <div class="content_1">
-                <div class="text_1">
-                    This website is awesome
+                <div class="subcontent_1">
+                    <div class="text_1">
+                        This website is awesome
+                    </div>
+                    <div class="text_2">
+                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                    </div>
+                    <button type="button">Sign up</button>
                 </div>
-                <div class="text_2">
-                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                <div class="subcontent_2">
+                    <img src="images/haunted_house.jpg">
                 </div>
-                <button type="button">Sign up</button>
-                <img src="images/haunted_house.jpg">
             </div>
             <div class="content_2">
                 <div class="text_3">
                     Some random information
                 </div>
-                <div class="subcontent_1">
+                <div class="subcontent_3">
                     <img src="images/image_1.png" alt="pumpkin.png">
                     this is some subtext under an illustration or image
                 </div>
-                <div class="subcontent_2">
+                <div class="subcontent_4">
                     <img src="images/image_2.png" alt="reaper.png">
                     this is some subtext under an illustration or image
                 </div>
-                <div class="subcontent_3">
+                <div class="subcontent_5">
                     <img src="images/image_3.png" alt="skull.png">
                     this is some subtext under an illustration or image
                 </div>
-                <div class="subcontent_4>">
+                <div class="subcontent_6>">
                     <img src="images/image_4.png" alt="skeleton.png">
                     this is some subtext under an illustration or image
                 </div>
             </div>
             <div class="content_3">
-                My Content 3
+                This is an inspirational quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actuall read it. Who knows? All I know is that it looks nice. <br>
+                -Thor, god of Thunder
             </div>
             <div class="content_4">
-                My Content 4
+                <div class="subcontent_7">
+                    Call to action! It's time!<br>
+                    Sign up for our product by clicking that button right over there!
+                    <button type="button">Sign Up</button>
+                </div>
             </div>
             <div class="footer">
                 Copyright © The Odin Project 2021
