Fixed git problem and made the webpage nicer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <div class="header_logo">
                     <img src="images/logo.jpg">
                 </div>
+                <div class="spacer">
+                    <br>
+                </div>
                 <div class="header_links">
                     <a href="https://en.wikipedia.org/wiki/The_Nun_II">header link one</a>
                     <a href="">header link two</a>
@@ -25,9 +28,8 @@
                         This website is awesome
                     </div>
                     <div class="text_2">
-                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast<br><button type="button">Sign up</button>
                     </div>
-                    <button type="button">Sign up</button>
                 </div>
                 <div class="subcontent_2">
                     <img src="images/haunted_house.jpg">
@@ -35,28 +37,34 @@
             </div>
             <div class="content_2">
                 <div class="text_3">
-                    Some random information
+                        Some random information.
                 </div>
-                <div class="subcontent_3">
-                    <img src="images/image_1.png" alt="pumpkin.png">
-                    this is some subtext under an illustration or image
-                </div>
-                <div class="subcontent_4">
-                    <img src="images/image_2.png" alt="reaper.png">
-                    this is some subtext under an illustration or image
-                </div>
-                <div class="subcontent_5">
-                    <img src="images/image_3.png" alt="skull.png">
-                    this is some subtext under an illustration or image
-                </div>
-                <div class="subcontent_6>">
-                    <img src="images/image_4.png" alt="skeleton.png">
-                    this is some subtext under an illustration or image
+                <div class="content_2_1">
+                    <div class="subcontent_3">
+                        <img src="images/image_1.png" alt="pumpkin.png">
+                        this is some subtext under an illustration or image
+                    </div>
+                    <div class="subcontent_4">
+                        <img src="images/image_2.png" alt="reaper.png">
+                        this is some subtext under an illustration or image
+                    </div>
+                    <div class="subcontent_5">
+                        <img src="images/image_3.png" alt="skull.png">
+                        this is some subtext under an illustration or image
+                    </div>
+                    <div class="subcontent_6">
+                        <img src="images/image_4.png" alt="skeleton.png">
+                        this is some subtext under an illustration or image
+                    </div>
                 </div>
             </div>
             <div class="content_3">
-                This is an inspirational quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actuall read it. Who knows? All I know is that it looks nice. <br>
-                -Thor, god of Thunder
+                <div class="content_3_1">
+                    This is an inspirational quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actuall read it. Who knows? All I know is that it looks nice.
+                </div>
+                <div class="content_3_2">
+                    -Thor, God of Thunder
+                </div>
             </div>
             <div class="content_4">
                 <div class="subcontent_7">
