Finished Landing Page Project

--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
             </div>
             <div class="content_4">
                 <div class="subcontent_7">
-                    Call to action! It's time!<br>
-                    Sign up for our product by clicking that button right over there!
-                    <button type="button">Sign Up</button>
+                    <div class="content_4_1">
+                        Call to action! It's time!<br>
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                    <div class="content_4_2">
+                        <button type="button">Sign Up</button>
+                    </div>
                 </div>
             </div>
             <div class="footer">
